<!--
  ~ Copyright 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">AiWork</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Composer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="conversations">Conversations</string>
    <string name="profile">Profile</string>
    <string name="jumpBottom">Jump to bottom</string>
    <string name="send">Send</string>
    <string name="author_me">me</string>
    <string name="now">8:30 PM</string>
    <string name="members">%d members</string>
    <string name="textfield_hint">Message #composers</string>
    <string name="swipe_to_cancel_recording">&#x25C0; Swipe to cancel</string>
    <string name="emojis_label">Emojis</string>
    <string name="stickers_label">Stickers</string>

    <string name="message">Message</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_error">There was an error loading the profile</string>
    <string name="bio">Bio</string>
    <string name="display_name">Display name</string>
    <string name="status">Status</string>
    <string name="timezone">Timezone</string>
    <string name="twitter">Twitter</string>
    <string name="common_channels">Channels in common</string>
    <string name="lorem">Lorem or Ipsum</string>

    <!-- Accessibility descriptions -->

    <string name="emoji_selector_desc">Emoji selector</string>
    <string name="emoji_selector_bt_desc">Show Emoji selector</string>
    <string name="dm_desc">Direct Message</string>
    <string name="attach_photo_desc">Attach Photo</string>
    <string name="map_selector_desc">Location selector</string>
    <string name="videochat_desc">Start videochat</string>
    <string name="textfield_desc">Text input</string>
    <string name="not_available">Functionality currently not available</string>
    <string name="not_available_subtitle">Grab a beverage and check back later!</string>
    <string name="attached_image">Attached image</string>
    <string name="search">Search</string>
    <string name="info">Information</string>
    <string name="more_options">More options</string>
    <string name="touch_and_hold_to_record">Touch and hold to record</string>
    <string name="record_message">Record voice message</string>
    <string name="record_audio">Record audio</string>

</resources>
